<resources>
    <string name="app_name">Drive Stream</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="my_drive">My drive</string>
    <string name="shared_drives">Shared drives</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="starred">Starred</string>
    <string name="trashed">Trashed</string>
    <string name="chapters">Chapters</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>
    <string name="playback_speed">Playback speed</string>
    <string name="resize">Resize</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="rotate">Rotate</string>
    <string name="unknown">Unknown</string>
    <string name="select_subtitle">Select subtitle track</string>
    <string name="select_audio">Select audio track</string>
    <string name="select_speed">Playback speed</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="ok">OK</string>
    <string name="details">Details</string>
    <string name="retry">Retry</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="logout">Logout</string>
    <string name="log_out_dialog_title">Are you sure you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rewind_10_seconds">Rewind 10 seconds</string>
    <string name="skip_10_seconds">Skip 10 seconds</string>
    <string name="track_off">Off</string>
    <string name="ui_chapter_fallback">Chapter %1$d (%2$s)</string>
    <string name="ui_chapter">%1$s (%2$s)</string>
    <string name="video">Video</string>
    <string name="enter_authorization_code">Enter authorization code?</string>
    <string name="authorization_url">Authorization url</string>
    <string name="authorization_url_hint">Authorization url</string>
    <string name="submit">Submit</string>
    <string name="please_enter_auth_url">Please enter authorization url</string>
    <string name="play_using">Play using</string>
    <string name="new_version_available">Newer version of app is available. Click to download.</string>
    <string name="authorization_code_example">Ex: http://127.0.0.1:53682/?code=4/0BX2XfWi1VC9Iadsaa1hIX80rd17crGFCgyHgR_8rwkrIRJJf18LlSGbBWeg0wbZJdEZ3tm3A</string>
    <string name="important_note_message">Due to recent changes made by Google, it is no longer possible to directly copy authorization code from the webpage after completion of OAuth Flow.\n\nYou will need to copy the entire url from the browser address bar. This page will not load and will show an error.\n\nPlease copy the entire url from the address bar and paste it in the dialog box.</string>
    <string name="select_theme">Select theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Follow system</string>
    <string name="no_files_found">No files found</string>
    <string name="pip_not_supported">PiP mode is not supported on your device</string>
    <string name="configure_your_drive_client">Configure your drive client</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client secret</string>
    <string name="redirect_uri">Redirect uri</string>
    <string name="need_help">Need help?</string>
    <string name="drive_scope">https://www.googleapis.com/auth/drive</string>
    <string name="scopes">Scopes</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="notification_permission_rationale">Please grant notification permission to receive update notifications</string>
    <string name="grant">Grant</string>
    <string name="app_settings">App Settings</string>
    <string name="light_dark_and_system">Light, Dark and Follow System</string>
    <string name="default_player">Default player</string>
    <string name="select_default_video_player">Select default video player</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="exoplayer">ExoPlayer</string>
    <string name="mpv">MPV</string>
    <string name="enable_ads">Enable Ads</string>
    <string name="support_the_developer_by_enabling_ads">Support the developer by enabling ads</string>
    <string name="disable_ads">Disable Ads</string>
    <string name="disable_ads_message">Are you sure you want to disable ads?\n\nThis will remove all ads from the app. Ads help support the development of this app.</string>
    <string name="thank_you_for_supporting_the_app">Thank you for supporting the app!</string>
    <string name="profiles">Profiles</string>
    <string name="add_account">Add account</string>
    <string name="new_account">New account</string>
    <string name="account_nickname">Account nickname</string>
    <string name="next">Next</string>
    <string name="please_enter_a_nickname">Please enter a nickname</string>
    <string name="account_already_exists">Account by this name already exists</string>
    <string name="switch_account">Switch account</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="set_as_default">Set as default</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_account_title">Are you certain you want to delete this account?</string>
    <string name="confirm_delete_account_warning">This action will revoke tokens and permanently delete all data associated with this account from the app.</string>
    <string name="just_delete">Just delete</string>
    <string name="edit_nickname">Edit nickname</string>
    <string name="update">Update</string>
    <string name="nickname_cannot_be_empty">Nickname cannot be empty</string>
    <string name="add_new_client">Add new client</string>
    <string name="confirm_delete_client_title">Are you sure you want to delete this client?</string>
    <string name="confirm_delete_client_warning">This will also delete all the accounts associated with this client. This action is irreversible.</string>
    <string name="edit">Edit</string>
    <string name="important_notice">Important Notice</string>
    <string name="important_notice_scope_warning">This app requires critical drive access permission to function properly. Removing this permission will render the app non-functional. Please note that the required permission is: \'https://www.googleapis.com/auth/drive\'. Removal is not permitted.</string>
    <string name="edit_client">Edit client</string>
    <string name="important_notice_client_id_warning">You cannot edit the client ID. Please create a new client, as editing the client ID will render any accounts using this client non-functional.</string>
    <string name="done">Done</string>
    <string name="login_step1"><b>1.</b> Click \'Launch in browser.\'</string>
    <string name="login_step2"><b>2.</b> Follow and complete the login process.</string>
    <string name="login_step3"><b>3.</b> Once completed, you will be directed to a broken webpage.</string>
    <string name="login_step4"><b>4.</b> Copy the entire URL and paste it below.</string>
    <string name="login_step5"><b>5.</b> Click \'Login\'.</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="launch_in_browser">Launch in browser</string>
    <string name="login">Login</string>
    <string name="empty_auth_url_message">Please follow the login steps and enter the authorization URL.</string>
    <string name="client_id_used">Client ID: %1$s</string>
</resources>