<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/playerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_back_24"
        app:navigationIconTint="@color/textColor"
        app:subtitleTextAppearance="@style/subtitleTextAppearance"
        app:subtitleTextColor="@color/textColor_54"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:titleTextColor="@color/textColor_87"
        tools:subtitle="video metadata"
        tools:title="Video title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUnlock"
        style="@style/Widget.Material3.Button.TonalButton.Icon.Only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:tooltipText="@string/unlock"
        android:visibility="gone"
        app:icon="@drawable/ic_unlock_24"
        app:iconSize="20dp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerToolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/mainControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Exoplayer ID, do not change -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/exo_rew"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:padding="16dp"
            android:tooltipText="@string/rewind_10_seconds"
            app:icon="@drawable/ic_rewind_skip_24"
            app:iconSize="24dp"
            app:iconTint="@android:color/white"
            tools:targetApi="o" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlayPause"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pause_24"
            app:iconSize="52dp"
            app:iconTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exo_ffwd"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:padding="16dp"
            android:tooltipText="@string/skip_10_seconds"
            app:icon="@drawable/ic_forward_skip_24"
            app:iconSize="24dp"
            app:iconTint="@android:color/white"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/controlsScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Exoplayer ID, do not change -->
        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            tools:text="28:46" />

        <!-- Exoplayer ID, do not change -->
        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            app:played_color="@color/colorAccent" />

        <!-- for mpv -->
        <SeekBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <!-- Exoplayer ID, do not change -->
        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            tools:text="1:33:02" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/controlsScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLock"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/lock"
                app:icon="@drawable/ic_lock_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRotate"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/rotate"
                app:icon="@drawable/ic_landscape_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPip"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/pip_mode"
                app:icon="@drawable/ic_pip_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnResize"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/resize"
                app:icon="@drawable/ic_resize_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSpeed"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/playback_speed"
                app:icon="@drawable/ic_speed_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAudio"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/audio"
                app:icon="@drawable/ic_audio_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubtitle"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/subtitles"
                app:icon="@drawable/ic_subtitles_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChapter"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:tooltipText="@string/chapters"
                app:icon="@drawable/ic_chapter_24"
                app:iconTint="@android:color/white"
                tools:targetApi="o" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>